# 
# Andrue Peters
# 4/2/20
#
# This file adds all of the individual problems

##################################################
#       Add the various Project Euler problems   #
##################################################
add_subdirectory (p1)
add_subdirectory (p2)
add_subdirectory (p3)
add_subdirectory (p4)
